# EclipseLinux

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: release.yml
config/: grub-live.cfg  issue  motd  os-release
config/skel/.config/fish/: config.fish  user.fish
config/skel/.config/fish/conf.d/: custom.fish
config/skel/.config/mako/: config
config/skel/.config/niri/: autostart.sh
config/skel/.config/waybar/modules/: network.jsonc
config/skel/.config/waybar/scripts/: cava_to_waybar.py  updates.sh
config/skel/.config/wlogout/: layout  style.css
eclipse-installer/: Cargo.toml
eclipse-installer/src/: config.rs  install.rs  log.rs  main.rs
eclipse-installer/src/ui/: mod.rs
eclipse-installer/src/wizard/: boot_mode.rs  complete.rs  confirm.rs  disk.rs  error.rs  filesystem.rs  hostname.rs  mod.rs  progress.rs  root_password.rs  summary.rs  timezone.rs  user_account.rs  welcome.rs
scripts/: build-iso.sh  build-rootfs.sh  eclipse-install  eclipse-niri-session
