[package]
name = "eclipse-installer"
version = "0.1.0"
edition = "2021"
description = "Eclipse Linux TUI installer"

[[bin]]
name = "eclipse-installer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nix = { version = "0.29", features = ["mount", "signal", "user", "fs"] }
regex = "1"
